columns no longer overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,7 +41,7 @@ a:hover{
 }
 
 .country-image-smaller{
-  width:250px;
+  width:100%;
 }
 
 .project-image{
